syntax = "proto3";

message BenchMessage {
  int32 field_1 = 1;
  string field_2 = 2;
}
